# yls-agi-rust-sdk

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
examples/: basic_chat.rs  claude_vision.rs  gemini_image.rs  gemini_image_edit.rs  gemini_vision.rs  openai_vision.rs
skills/yls-agi-rust-sdk/: SKILL.md
src/: client.rs  error.rs  lib.rs  models.rs  types.rs
src/provider/: claude.rs  gemini.rs  mod.rs  openai.rs  responses.rs  sse.rs
tests/: live_multimodal.rs  sdk.rs
