[package]
name = "yls-agi-rust-sdk"
version = "0.1.3"
edition = "2024"
description = "Rust SDK for the YLS AGI gateway with unified OpenAI, Claude, and Gemini clients"
license = "MIT"
repository = "https://github.com/mdddj/yls-agi-rust-sdk"
homepage = "https://github.com/mdddj/yls-agi-rust-sdk"
readme = "README.md"
keywords = ["ai", "openai", "claude", "gemini", "sdk"]
categories = ["api-bindings"]

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
eventsource-stream = "0.2"
futures = "0.3"
openai_api_rust = "0.1.9"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
url = "2"

[dev-dependencies]
wiremock = "0.6"
